--- a/values-test-merge.yaml
+++ b/values-test-merge.yaml
@@ -11,4 +11,8 @@ vaultOperator:
         valueFrom:
           fieldRef:
             fieldPath: metadata.namespace
+      - name: VAULT_K8S_NAMESPACE
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
 
