--- a/vault-operator-config/values.yaml
+++ b/vault-operator-config/values.yaml
@@ -19,6 +19,10 @@ vaultOperator:
         valueFrom:
           fieldRef:
             fieldPath: metadata.namespace
+      - name: VAULT_K8S_NAMESPACE
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
   vaults: []
 #   - name: "vault01"
 #     size: 3
