feat(security): added attribute representing securityContext attributes

--- a/vault-operator-config/templates/vaults.yaml
+++ b/vault-operator-config/templates/vaults.yaml
@@ -66,6 +66,10 @@ spec:
   resources:
   {{- toYaml . | nindent 4 -}}
   {{ end }}
+  {{- with .securityContext }}
+  securityContext:
+  {{- toYaml . | nindent 4 -}}
+  {{ end }}
   {{- with .sidecarEnvsConfig }}
   sidecarEnvsConfig:
   {{- toYaml . | nindent 4 -}}
